--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,3 +23,11 @@
 
   <meta name="description" content="Feedly without images">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
+<style>
+  .box {
+    -webkit-box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
+    -moz-box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
+    box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
+  }
+  </style>
