--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,10 @@
 
 <style>
   .box {
+    margin: 0 0 60px 30px;
+    width: 25%;
+    padding: 10px;
+    text-align: center;
     -webkit-box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
     -moz-box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
     box-shadow: 13px 9px 33px -2px rgba(0,0,0,0.68);
