--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="shortcut icon" type="image/png" href="/assets/feedly-no-img.png">
-  <link rel="stylesheet" href="/feedly-no-img/assets/css/style.css?v=6a0f36838fb65355a878d5df744a37f7dc98372d">
+  <!--<link rel="stylesheet" href="/feedly-no-img/assets/css/style.css?v=6a0f36838fb65355a878d5df744a37f7dc98372d">-->
+  <link rel="stylesheet" href="/feedly-no-img/assets/style.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="/feedly-no-img/assets/js/script.js"></script>
 
