--- a/assets/style.css
+++ b/assets/style.css
@@ -170,7 +170,7 @@ h1.title{
 }
 #container{
     border:1px solid #2a2a2a;
-    background:#ddd url(../images/pattern.png);
+    background:#ddd url(../assets/images/pattern.png);
     box-shadow:0 0 5px #b1b1b1
 }
 p.tagline{
@@ -249,7 +249,7 @@ p.tagline{
     display:block
 }
 .download-bar a.code{
-    background:transparent url(../images/code.png) no-repeat 0 2px;
+    background:transparent url(../assets/images/code.png) no-repeat 0 2px;
     padding-left:35px;
     margin-top:8px;
     display:block;
@@ -282,7 +282,7 @@ p.tagline{
 .current-section a{
     float:right;
     text-indent:-10000px;
-    background:transparent url(../images/top.png) no-repeat 0 0;
+    background:transparent url(../assets/images/top.png) no-repeat 0 0;
     width:20px;
     height:20px;
     opacity:0.8;
@@ -301,7 +301,7 @@ p.tagline{
     margin-right:8px
 }
 a.zip,a.zip span{
-    background:transparent url(../images/zip.png) no-repeat 0 0;
+    background:transparent url(../assets/images/zip.png) no-repeat 0 0;
     width:30px;
     height:21px;
     display:inline-block;
@@ -312,7 +312,7 @@ a.zip,a.zip span{
     -webkit-transition:opacity ease-in-out 0.3s
 }
 a.tar,a.tar span{
-    background:transparent url(../images/tar.png) no-repeat 0 0;
+    background:transparent url(../assets/images/tar.png) no-repeat 0 0;
     width:30px;
     height:21px;
     display:inline-block;
@@ -323,7 +323,7 @@ a.tar,a.tar span{
     -webkit-transition:opacity ease-in-out 0.3s
 }
 a.code{
-    background:transparent url(../images/code.png) no-repeat 0 2px;
+    background:transparent url(../assets/images/code.png) no-repeat 0 2px;
     width:30px;
     height:21px;
     display:block;
@@ -607,4 +607,15 @@ footer .owner p a{
 }
 .highlight .ss{
     color:#90a959
+}
+.box {
+	text-transform:capitalize;
+	text-decoration:none;
+	margin:0 0 60px 30px;
+	width:25%;
+	padding:10px;
+	text-align:center;
+	-webkit-box-shadow:13px 9px 33px -2px rgba(0,0,0,0.68);
+	-moz-box-shadow:13px 9px 33px -2px rgba(0,0,0,0.68);
+	box-shadow:13px 9px 33px -2px rgba(0,0,0,0.68)
 }
