--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SidVal/feedly-no-img/issues/new" class="code" target="_new">Issues, suggestions?</a>
+          <a href="https://github.com/SidVal/feedly-no-img/issues/new?labels=comments&milestone=1&assignee=SidVal" class="code" target="_new">Issues, suggestions?</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
