--- a/assets/style.css
+++ b/assets/style.css
@@ -620,3 +620,8 @@ footer .owner p a{
 	-moz-box-shadow:13px 9px 33px -2px rgba(0,0,0,0.68);
 	box-shadow:13px 9px 33px -2px rgba(0,0,0,0.68)
 }
+.box a, .box a:hover {
+	text-decoration:underline;
+    text-decoration-style:wavy;
+    text-decoration-color:#b22269
+}
