--- a/assets/style.css
+++ b/assets/style.css
@@ -179,6 +179,10 @@ p.tagline{
 	font-family: Georgia, serif;
     font-size:16px
 }
+p.tagline a{
+	text-decoration:none
+}
+p.tagline a:hover{text-decoration:underline}
 #main{
     margin-top:20px;
     padding:0 20px 90px;
