--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
-      <p class="tagline"><a href="https://github.com/SidVal/feedly-no-img/" title="Feedly No Img">{{ site.description | default: site.github.project_tagline }}</a></p>
+      <p class="tagline"><a href="https://sidval.github.io/feedly-no-img/" title="Feedly No Img">{{ site.description | default: site.github.project_tagline }}</a></p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
