--- a/assets/style.css
+++ b/assets/style.css
@@ -180,6 +180,7 @@ p.tagline{
     font-size:16px
 }
 p.tagline a{
+	color:#e6aeae !important;
 	text-decoration:none
 }
 p.tagline a:hover{text-decoration:underline}
